--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 .gradle
 /local.properties
 /.idea/caches
+/.idea/dictionaries
 /.idea/libraries
+/.idea/misc.xml
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
@@ -12,3 +14,5 @@
 /captures
 .externalNativeBuild
 .cxx
+google-services.json
+local.properties
